# mpv-winbuild-cmake

./: .gitignore  CMakeLists.txt  CRUDE_README.md  README.md  build-mediaxx.sh  build-mpv.sh  clean.sh  configure.sh  copydocker.sh  copyoutput.sh  env-build.sh  ffmpeg-clean.sh  ffmpeg-rebuild.sh  mediaxx-clean.sh  mediaxx-help-clean.sh  mediaxx-help-rebuild.sh  mediaxx-rebuild.sh  mpv-clean.sh  mpv-rebuild.sh  toolchain.cmake.in
.github/workflows/: llvm_clang.yml  mpv_clang.yml
cmake/: custom_steps.cmake  packages_check.cmake
help/: create_comm_syms.sh
patch-outdate/: ffmpeg-dash-base-url-escape-beforeffmpeg8.1.1.patch  ffmpeg-flac-id3-extmeta-beforeffmpeg8.1.1.patch
source/mediaxx-ffmpeg-help--/: CMakeLists.txt  export.cpp  export.def
